fixed incorrect album track alignment on small screens

--- a/src/css/14-l.css
+++ b/src/css/14-l.css
@@ -133,7 +133,7 @@
 		max-width: 68em;
 		width: auto;
 	}
-	.content-discography .album-tracks .album-duration-container .album-duration-separator {
+	.content-discography .album-tracks .album-duration-container .album-duration-label {
 		padding: 8px 1px 0 0;
 	}
 
